--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,8 @@ header,
   background-color: black !important;
 }
 
-.navbar {
-  border-bottom: 1px solid white !important;
-}
-
-header {
-  border-bottom: 1px solid white;
+#header2 h2 {
+  margin: 0;
 }
 
 #imgLogo {
@@ -30,9 +26,41 @@ header {
 
 .form-select {
   background-color: black;
-  width: 78px;
+  width: 100px;
 }
 
-#tvTitleAndSelect {
-  gap: 3;
+.navbar-toggler-icon {
+  background-image: url("../img/dropBtn.svg");
+}
+
+.navbar-toggler {
+  border: 1px solid rgba(255, 255, 255, 0.241);
+  border-radius: 4px;
+  padding: 2px 6px;
+}
+
+.bi-text-left,
+.bi-border-all {
+  padding: 8px 10px;
+  border: 1px solid rgba(255, 255, 255, 0.241);
+}
+
+.bi-text-left:hover,
+.bi-border-all:hover {
+  background-color: rgba(255, 255, 255, 0.241);
+  cursor: pointer;
+}
+
+h4 {
+  margin: 0;
+}
+
+.carousel-inner img {
+  transition: transform 0.3s ease;
+}
+
+.carousel-inner img:hover {
+  cursor: pointer;
+  transition-property: transform;
+  transform: scale(1.1, 1.1);
 }
