--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,3 +150,20 @@ input[type="checkbox"] {
 input[type="text"] {
   background-color: rgba(255, 255, 255, 0.826);
 }
+
+#dropDiv {
+  position: relative;
+}
+
+#menuDrop {
+  position: absolute;
+  right: 5000px;
+}
+
+.dropdown-toggle::after {
+  display: none !important;
+}
+
+.dropdown-toggle::before {
+  display: none !important;
+}
