--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,3 +176,59 @@ input[type="text"] {
   position: absolute !important;
   left: -120px !important;
 }
+
+#checkboxFirstPage {
+  vertical-align: middle;
+}
+
+.container {
+  position: relative;
+  padding: 0;
+}
+
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: black;
+  border: 2px solid white;
+}
+.container:hover input ~ .checkmark {
+  background-color: black;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: black;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  left: 5px;
+  top: 2px;
+  width: 4px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
