--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,7 @@ input[type="text"] {
   position: absolute !important;
   left: -120px !important;
 }
-
+/*
 #checkboxFirstPage {
   vertical-align: middle;
 }
@@ -232,3 +232,4 @@ input[type="text"] {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+*/
