--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,13 +80,20 @@ a:visited {
 }
 
 .carousel-inner img {
+  z-index: 2;
+  position: relative;
   transition: transform 0.3s ease;
+  transition: opacity 0.3s ease;
+  transition: z-index 0s ease;
+  opacity: 0.7;
 }
 
 .carousel-inner img:hover {
   cursor: pointer;
   transition-property: transform;
   transform: scale(1.1, 1.1);
+  opacity: 1;
+  z-index: 3;
 }
 
 .footIcon {
@@ -150,7 +157,7 @@ input[type="checkbox"] {
 input[type="text"] {
   background-color: rgba(255, 255, 255, 0.826);
 }
-
+/*
 #dropDiv {
   position: relative;
 }
@@ -158,7 +165,7 @@ input[type="text"] {
 #menuDrop {
   position: absolute;
   right: 5000px;
-}
+}*/
 
 .dropdown-toggle::after {
   display: none !important;
