--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,11 +113,13 @@ a:visited {
 .carousel-control-prev {
   justify-content: flex-start;
   width: fit-content;
+  z-index: 5;
 }
 
 .carousel-control-next {
   justify-content: flex-end;
   width: fit-content;
+  z-index: 5;
 }
 
 hr {
