--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ a:visited {
   position: relative;
   transition: transform 0.3s ease;
   transition: opacity 0.3s ease;
-  transition-property: z-index;
+  transform: scale(1, 1);
   opacity: 0.7;
 }
 
