--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,7 @@ a:visited {
 }
 
 .carousel-inner img {
+  transition: z-index;
   z-index: 2;
   position: relative;
   transition: transform 0.3s ease;
@@ -90,7 +91,7 @@ a:visited {
 
 .carousel-inner img:hover {
   cursor: pointer;
-  transition-property: transform;
+
   transform: scale(1.1, 1.1);
   opacity: 1;
   z-index: 3;
