--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,15 +83,12 @@ a:visited {
   transition: z-index;
   z-index: 2;
   position: relative;
-  transition: transform 0.3s ease;
-  transition: opacity 0.3s ease;
-  transform: scale(1, 1);
+  transition: transform 0.3s ease, opacity 0.3s ease, z-index 0s;
   opacity: 0.7;
 }
 
 .carousel-inner img:hover {
   cursor: pointer;
-
   transform: scale(1.1, 1.1);
   opacity: 1;
   z-index: 3;
