--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ input[type="text"] {
 .dropdown-menu.show {
   position: absolute !important;
   left: -120px !important;
+  background-color: black !important;
 }
 /*
 #checkboxFirstPage {
